--- a/app/detail.html
+++ b/app/detail.html
@@ -3,106 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <title>Entry Detail</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f5f5f7;
-      color: #222;
-    }
-    main {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 24px 16px 40px;
-    }
-    h1 {
-      margin: 12px 0 8px;
-      font-size: 1.6rem;
-      font-weight: 600;
-    }
-    #detailMeta {
-      font-size: 0.85rem;
-      color: #555;
-      margin-bottom: 12px;
-    }
-    #detailText {
-      white-space: pre-wrap;
-      font-size: 0.95rem;
-      line-height: 1.5;
-      background: #fff;
-      border-radius: 8px;
-      border: 1px solid #e0e0e0;
-      padding: 12px 14px;
-    }
-    mark {
-      background: #ffe58f;
-      padding: 0 1px;
-      border-radius: 2px;
-    }
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      padding: 6px 12px;
-      border-radius: 999px;
-      border: 1px solid #ccc;
-      background: #f9f9fb;
-      font-size: 0.85rem;
-      cursor: pointer;
-      text-decoration: none;
-      color: inherit;
-    }
-    .btn:hover {
-      background: #f0f0f3;
-    }
-    .btn svg {
-      width: 14px;
-      height: 14px;
-    }
-    #status {
-      font-size: 0.85rem;
-      color: #555;
-      margin-top: 4px;
-      min-height: 1.2em;
-    }
-    .error {
-      color: #b00020;
-    }
-    /* Line-numbered row */
-.line-row {
-  display: grid;
-  grid-template-columns: 60px 1fr;
-  gap: 12px;
-  padding: 4px 0;
-  border-bottom: 1px solid #f0f0f0;
-}
-
-.line-num {
-  font-family: monospace;
-  font-size: 0.8rem;
-  text-align: right;
-  color: #777;
-  padding-right: 6px;
-  user-select: none;
-}
-
-.line-text {
-  white-space: pre-wrap;
-  font-size: 0.95rem;
-  line-height: 1.45;
-}
-
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <main>
     <a id="backLink" class="btn" href="search.html">
       <svg viewBox="0 0 16 16" aria-hidden="true" focusable="false">
-        <path d="M10.5 3L5 8l5.5 5" fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="1.4"/>
+        <path d="M10.5 3L5 8l5.5 5"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-width="1.4" />
       </svg>
       Back to search
     </a>
@@ -114,16 +25,6 @@
   </main>
 
   <script>
-    function extractLineNum(line) {
-  const m = line.match(/\[\[(.*?)]]/);
-  return m ? m[1] : "";
-}
-
-function stripLineNum(line) {
-  return line.replace(/\[\[(.*?)]]\s*/, "");
-}
-
-
     function getParams() {
       const params = new URLSearchParams(window.location.search);
       return {
@@ -173,12 +74,21 @@ function stripLineNum(line) {
       return result;
     }
 
+    function extractLineNum(line) {
+      const m = line.match(/\[\[(.*?)]]/);
+      return m ? m[1] : "";
+    }
+
+    function stripLineNum(line) {
+      return line.replace(/\[\[(.*?)]]\s*/, "");
+    }
+
     async function loadEntry() {
       const { id, q, caseSensitive } = getParams();
       const statusEl = document.getElementById("status");
       const titleEl = document.getElementById("detailTitle");
       const metaEl = document.getElementById("detailMeta");
-      const textEl = document.getElementById("detailText");
+      const textContainer = document.getElementById("detailText");
 
       if (!id) {
         statusEl.textContent = "Missing id parameter.";
@@ -215,29 +125,28 @@ function stripLineNum(line) {
           (entry.seq != null ? entry.seq : "∅");
 
         const full = entry.text || "";
-const lines = full.split(/\r?\n/);
+        const lines = full.split(/\r?\n/);
 
-textEl.innerHTML = ""; // clear
+        textContainer.innerHTML = "";
 
-lines.forEach(line => {
-  if (!line.trim()) return;  // skip empty lines if desired
+        lines.forEach(line => {
+          if (!line.trim()) return; // skip empty lines if desired
 
-  const row = document.createElement("div");
-  row.className = "line-row";
+          const row = document.createElement("div");
+          row.className = "line-row";
 
-  const numEl = document.createElement("div");
-  numEl.className = "line-num";
-  numEl.textContent = extractLineNum(line);
+          const numEl = document.createElement("div");
+          numEl.className = "line-num";
+          numEl.textContent = extractLineNum(line);
 
-  const textEl2 = document.createElement("div");
-  textEl2.className = "line-text";
-  textEl2.innerHTML = highlightAll(stripLineNum(line), q, caseSensitive);
+          const textEl = document.createElement("div");
+          textEl.className = "line-text";
+          textEl.innerHTML = highlightAll(stripLineNum(line), q, caseSensitive);
 
-  row.appendChild(numEl);
-  row.appendChild(textEl2);
-  textEl.appendChild(row);
-});
-
+          row.appendChild(numEl);
+          row.appendChild(textEl);
+          textContainer.appendChild(row);
+        });
       } catch (e) {
         console.error(e);
         statusEl.textContent =
@@ -254,7 +163,6 @@ lines.forEach(line => {
       if (q) params.set("q", q);
       if (caseSensitive) params.set("cs", "1");
 
-      // If you later wire search.html to read these params, this will preserve state.
       back.href = "search.html" + (params.toString() ? "?" + params.toString() : "");
     }
 
