--- a/app/search.html
+++ b/app/search.html
@@ -7,9 +7,8 @@
 </head>
 <body>
   <main>
-    <h1>Search JSON Text</h1>
+    <h1>Search Leibniz Texts</h1>
     <p class="subtitle">
-      Searches across the <code>text</code> fields in <code>sample_entries.json</code>.
       Results show only the matching line; click to open the full entry.
     </p>
 
