--- a/app/search.html
+++ b/app/search.html
@@ -6,33 +6,55 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <main>
-    <h1>Search Leibniz Texts</h1>
-    <p class="subtitle">
-      Results show only the matching line; click to open the full entry.
-    </p>
+  <div class="layout">
+    <aside class="sidebar">
+      <div class="sidebar-inner">
+        <div class="sidebar-header">
+          <span class="sidebar-title">Navigation</span>
+          <button id="sidebarCollapseBtn" class="sidebar-collapse-btn" type="button">
+            ⟨
+          </button>
+        </div>
+        <nav class="sidebar-nav">
+          <a href="search.html" data-page="search">Search</a>
+          <a href="browse.html" data-page="index">Series Index</a>
+        </nav>
+      </div>
+    </aside>
 
-    <div class="search-bar">
-      <input
-        type="text"
-        id="searchInput"
-        placeholder="Type to search in text fields…"
-        autocomplete="off"
-      />
-      <label>
-        <input type="checkbox" id="caseSensitive" />
-        Case sensitive
-      </label>
-      <label>
-        <input type="checkbox" id="toggleLineNumbers" checked />
-        Show line numbers
-      </label>
-    </div>
+    <main>
+      <button id="sidebarExpandBtn" class="sidebar-expand-btn" type="button">
+        ☰
+      </button>
 
-    <div id="status" class="muted">Loading data…</div>
+      <h1>Search Leibniz Texts</h1>
+      <p class="subtitle">
+        Searches across the <code>text</code> fields in <code>sample_entries.json</code>.
+        Results show only the matching line; click to open the full entry.
+      </p>
 
-    <ul id="results"></ul>
-  </main>
+      <div class="search-bar">
+        <input
+          type="text"
+          id="searchInput"
+          placeholder="Type to search in text fields…"
+          autocomplete="off"
+        />
+        <label>
+          <input type="checkbox" id="caseSensitive" />
+          Case sensitive
+        </label>
+        <label>
+          <input type="checkbox" id="toggleLineNumbers" checked />
+          Show line numbers
+        </label>
+      </div>
+
+      <div id="status" class="muted">Loading data…</div>
+
+      <ul id="results"></ul>
+    </main>
+  </div>
 
   <script>
     let entries = [];
@@ -67,31 +89,17 @@
       return caseSensitive ? text : text.toLowerCase();
     }
 
-    // Escape user query for use in a RegExp
-function escapeRegExp(str) {
-  return str.replace(/[.*+?^${}()|[\]\\]/g, "\\$&");
-}
+    // If you are rendering HTML in text fields, use the HTML-aware highlighter.
+    function escapeRegExp(str) {
+      return str.replace(/[.*+?^${}()|[\]\\]/g, "\\$&");
+    }
 
-// Highlight ALL matches, preserving HTML tags already in `text`
-function highlightAllHTML(text, query, caseSensitive) {
-  if (!query) return text; // trust `text` as HTML
-
-  const flags = caseSensitive ? "g" : "gi";
-  const pattern = new RegExp(escapeRegExp(query), flags);
-
-  return text.replace(pattern, "<mark>$&</mark>");
-}
-
-// Highlight FIRST match only (for search results line preview)
-function highlightFirstHTML(text, query, caseSensitive) {
-  if (!query) return text;
-
-  const flags = caseSensitive ? "" : "i";
-  const pattern = new RegExp(escapeRegExp(query), flags);
-
-  return text.replace(pattern, "<mark>$&</mark>");
-}
-
+    function highlightFirstHTML(text, query, caseSensitive) {
+      if (!query) return text;
+      const flags = caseSensitive ? "" : "i";
+      const pattern = new RegExp(escapeRegExp(query), flags);
+      return text.replace(pattern, "<mark>$&</mark>");
+    }
 
     function getMatchedLine(fullText, query, caseSensitive) {
       if (!fullText) return "";
@@ -144,9 +152,10 @@ function highlightFirstHTML(text, query, caseSensitive) {
         const meta = document.createElement("div");
         meta.className = "result-meta";
         meta.innerHTML = `
-  <div>${item.series || "∅ series"}</div>
-  <div class="title-meta">${item.title || "∅ title"} (${item.seq != null ? item.seq : "∅"})</div>
-`;
+          <div>${item.series || "∅ series"}</div>
+          <div>${item.title || "∅ title"}</div>
+          <div>Seq: ${item.seq != null ? item.seq : "∅"}</div>
+        `;
 
         const fullText = item.text || "";
         const rawLine = getMatchedLine(fullText, query, caseSensitive);
@@ -162,8 +171,7 @@ function highlightFirstHTML(text, query, caseSensitive) {
 
         const textEl = document.createElement("div");
         textEl.className = "line-text";
-textEl.innerHTML = highlightFirstHTML(cleanLine, query, caseSensitive);
-
+        textEl.innerHTML = highlightFirstHTML(cleanLine, query, caseSensitive);
 
         row.appendChild(numEl);
         row.appendChild(textEl);
@@ -237,11 +245,42 @@ textEl.innerHTML = highlightFirstHTML(cleanLine, query, caseSensitive);
       }
     }
 
+    function setupSidebar(currentPageKey) {
+      const collapseBtn = document.getElementById("sidebarCollapseBtn");
+      const expandBtn = document.getElementById("sidebarExpandBtn");
+      const navLinks = document.querySelectorAll(".sidebar-nav a");
+
+      function setActiveLink() {
+        navLinks.forEach((link) => {
+          const page = link.getAttribute("data-page");
+          if (page === currentPageKey) {
+            link.classList.add("active");
+          } else {
+            link.classList.remove("active");
+          }
+        });
+      }
+
+      function collapse() {
+        document.body.classList.add("sidebar-collapsed");
+      }
+
+      function expand() {
+        document.body.classList.remove("sidebar-collapsed");
+      }
+
+      if (collapseBtn) collapseBtn.addEventListener("click", collapse);
+      if (expandBtn) expandBtn.addEventListener("click", expand);
+
+      setActiveLink();
+    }
+
     window.addEventListener("DOMContentLoaded", async () => {
       const { q, caseSensitive } = getParams();
       await loadData();
       setupSearch(q, caseSensitive);
-      setupLineToggle(true); // default: show line numbers
+      setupLineToggle(true);
+      setupSidebar("search");
     });
   </script>
 </body>
