--- a/app/detail.html
+++ b/app/detail.html
@@ -17,7 +17,7 @@
         </div>
         <nav class="sidebar-nav">
           <a href="search.html" data-page="search">Search</a>
-          <a href="index.html" data-page="index">Series Index</a>
+          <a href="browse.html" data-page="index">Series Index</a>
         </nav>
       </div>
     </aside>
@@ -274,13 +274,20 @@
             numEl.classList.add("line-num-clickable");
             numEl.title = "Click to link to line " + ln;
             numEl.addEventListener("click", (ev) => {
-              ev.stopPropagation();
-              const hash = "#" + encodeURIComponent(ln);
-              if (window.location.hash !== hash) {
-                history.replaceState(null, "", hash);
-              }
-              activateLineByNumber(ln, false);
-            });
+                ev.stopPropagation();
+
+                const hash = "line-" + encodeURIComponent(ln);
+
+                // Update only the hash in the browser location bar
+                const newUrl = location.href.replace(/#.*/, "") + "#" + hash;
+                history.replaceState(null, "", "#" + hash);
+
+                // Copy the full URL including ?id=... and #line-...
+                navigator.clipboard.writeText(newUrl).catch(() => {});
+
+                activateLineByNumber(ln, false);
+                });
+
           }
 
           const textEl = document.createElement("div");
